Work in progress

--- a/core/admin/controls/small.html
+++ b/core/admin/controls/small.html
@@ -1,4 +1,73 @@
-Это смол
 
+
+ <div class="mb-3 row">
+    <label for="inputPassword" class="col-sm-2 col-form-label">Это смол</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="inputPassword">
+    </div>
+  </div>
+  <div class="form-floating mb-3">
+  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+  <label for="floatingInput">Email address</label>
+</div>
+
+
+
+ <div>
+    <label   class="mb-3 row"> 
+		<div  class="col-sm-2 col-form-label">
+			Это смол2
+		</div>
+		<div class="col-sm-7">
+		  <input type="text" class="form-control"  >
+		</div>
+	</label>
+  </div>
+
+ <div>
+    <label   class="mb-3 row"> 
+		<div  class="col-sm-2 col-form-label" style="text-align:right;">
+			Это смол2
+		</div>
+		<div class="col-sm-7">
+		  <input type="text" class="form-control"  >
+		
+	
+		  <div   class="form-text">
+  Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+</div>
+		</div>
+	</label>
+	
+	
+  </div>
+  <div>
+    <label   class="mb-3 row"> 
+		<div  class="col-sm-2 col-form-label" style="text-align:right;">
+			Это valid city
+		</div>
+		<div class="col-sm-7">
+		  <input type="text" class="form-control is-invalid"   >
+		        <div   class="invalid-feedback">
+      Please provide a valid city.
+    </div>
+		  <div   class="form-text">
+  Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+</div>
+		</div>
+	</label>
+	
+	
+  </div>
+  
+  
+
+  
+
+
+<div class="form-floating">
+  <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+  <label for="floatingPassword">Password</label>
+</div>
 <?php var_dump($name);  var_dump($title); var_dump($id); var_dump($value); ?>
 
